# BPCE

./: Cargo.toml  README.md
assets/: README.md
bpce/: Cargo.toml
src/: file_select.rs  main.rs  utils.rs
src/file_select/: components.rs  styles.rs
