[package]
name = "bpce"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.1"
bevy-persistent = { version = "0.6.0", features = ["all"] }
bevy_file_dialog = "0.6.0"
bevy_simple_scroll_view = "0.2.0"
dirs = "5.0.1"
rand = "0.8.5"
zip = "2.1.6"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
